--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>Polo Landmark</name>
+		<name>Polo Landmark Tech</name>
 		<url>http://landmarktechnologies.com/</url>
 	</organization>
 
