--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository </name>
+	      <name>admin</name>
 	      <url>http://3.145.177.226:8081/repository/tesla-fe-snapshots/</url>
 	    </snapshotRepository>
 	    
